--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,6 @@
         app:layout_constraintVertical_bias="0.484" />
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/showtext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
 
 
     <soup.neumorphism.NeumorphButton
@@ -95,6 +84,7 @@
 
 
         <soup.neumorphism.NeumorphImageButton
+            android:id="@+id/buttonRing1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerInside"
@@ -102,13 +92,15 @@
             app:neumorph_shapeType="flat" />
 
         <soup.neumorphism.NeumorphImageButton
+            android:id="@+id/buttonRing2"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerInside"
             android:src="@drawable/baseline_circle_notifications_24"
-            app:neumorph_shapeType="flat" />
+            app:neumorph_shapeType="pressed" />
 
         <soup.neumorphism.NeumorphImageButton
+            android:id="@+id/buttonRing3"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerInside"
