user preference is saved, now implementing logic for ringing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
             android:layout_height="100dp"
             android:scaleType="centerInside"
             android:src="@drawable/baseline_circle_notifications_24"
-            app:neumorph_shapeType="pressed" />
+            app:neumorph_shapeType="flat" />
 
         <soup.neumorphism.NeumorphImageButton
             android:id="@+id/buttonRing3"
