--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,23 +11,24 @@
 
     <soup.neumorphism.NeumorphButton
         android:id="@+id/neumorphButton"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
+        android:layout_width="382dp"
+        android:layout_height="71dp"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="Brutalarm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <soup.neumorphism.NeumorphButton
         android:id="@+id/Button1"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_width="517dp"
+        android:layout_height="98dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="00:00"
         app:layout_constraintEnd_toStartOf="@+id/buttonRing1"
+        app:layout_constraintHorizontal_bias="0.801"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neumorphButton" />
 
@@ -42,13 +43,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Button3"
-        app:layout_constraintVertical_bias="0.875" />
+        app:layout_constraintVertical_bias="0.102" />
 
     <soup.neumorphism.NeumorphButton
         android:id="@+id/Button3"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="@string/instructions"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,19 +61,19 @@
         android:id="@+id/neumorphImageButton"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginBottom="280dp"
+        android:layout_marginTop="20dp"
         android:scaleType="centerInside"
         android:src="@drawable/baseline_grid_goldenratio_24"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button1"
-        app:layout_constraintVertical_bias="0.956" />
+        app:layout_constraintTop_toBottomOf="@+id/Button1" />
 
     <soup.neumorphism.NeumorphImageButton
         android:id="@+id/buttonRing1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="192dp"
+        android:layout_height="95dp"
+        android:layout_marginEnd="80dp"
         android:scaleType="centerInside"
         android:src="@drawable/baseline_circle_notifications_24"
         app:layout_constraintBottom_toBottomOf="@+id/Button1"
