allowing user to add new Alarms.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -55,10 +55,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/neumorphImageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/Button4NewAlarm" />
 
     <soup.neumorphism.NeumorphImageButton
-        android:id="@+id/neumorphImageButton"
+        android:id="@+id/Button4NewAlarm"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginTop="20dp"
